// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ArmorEdit render should work with all props 1`] = `
<div>
  <h2
    className="icon fa-shield"
  >
    Armor
  </h2>
  <div
    className="armor-edit"
  >
    <div
      className="nice-panel armor-edit__basics"
      id={undefined}
    >
      <div
        className="nice-panel-heading"
      >
        Basics
      </div>
      <div
        className="nice-panel-content"
      >
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Type
          </span>
          <div
            className="nice-dropdown nice-form-control"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Medium Armor
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className={null}
                data-value="light"
                onClick={[Function]}
              >
                <a>
                  Light Armor
                </a>
              </li>
              <li
                className="info"
                data-value="medium"
                onClick={[Function]}
              >
                <a>
                  Medium Armor
                </a>
              </li>
              <li
                className={null}
                data-value="heavy"
                onClick={[Function]}
              >
                <a>
                  Heavy Armor
                </a>
              </li>
              <li
                className={null}
                data-value="shield"
                onClick={[Function]}
              >
                <a>
                  Shields
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Name
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Name..."
            type={undefined}
            value="T-shirt"
          />
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            AC
          </span>
          <div
            className="nice-dropdown nice-form-control"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Bonus armor
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className={null}
                data-value="value"
                onClick={[Function]}
              >
                <a>
                  Flat value
                </a>
              </li>
              <li
                className="info"
                data-value="bonus"
                onClick={[Function]}
              >
                <a>
                  Bonus armor
                </a>
              </li>
              <li
                className={null}
                data-value="formula"
                onClick={[Function]}
              >
                <a>
                  Formula
                </a>
              </li>
            </ul>
          </div>
          <span
            className="nice-input-addon"
          >
            :
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Bonus..."
            type="number"
            value={2}
          />
        </div>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="nice-panel armor-edit__properties"
      id={undefined}
    >
      <div
        className="nice-panel-heading"
      >
        Properties
      </div>
      <div
        className="nice-panel-content"
      >
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Requires
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Strength..."
            type="number"
            value={13}
          />
          <span
            className="nice-input-addon"
          >
            Strength
          </span>
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Weight
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Pounds..."
            type="float"
            value={0.3}
          />
          <span
            className="nice-input-addon"
          >
            lb.
          </span>
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Stealth
          </span>
          <div
            className="nice-dropdown nice-form-control"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Disadvantage
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className={null}
                data-value={false}
                onClick={[Function]}
              >
                <a>
                  Unhindered
                </a>
              </li>
              <li
                className="info"
                data-value={true}
                onClick={[Function]}
              >
                <a>
                  Disadvantage
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Value
          </span>
          <div
            className="base-tag-container nice-tags-container tag-value-container"
          >
            <div
              className="nice-dropdown nice-form-control"
            >
              <button
                className="nice-btn"
                disabled={false}
                onClick={[Function]}
              >
                Add...
                <i
                  className="icon fa-angle-down"
                />
              </button>
              <ul
                className="dropdown-menu"
                onClick={[Function]}
              >
                <li
                  className={null}
                  data-value="cp"
                  onClick={[Function]}
                >
                  <a>
                    Copper
                  </a>
                </li>
                <li
                  className={null}
                  data-value="ep"
                  onClick={[Function]}
                >
                  <a>
                    Electrum
                  </a>
                </li>
                <li
                  className={null}
                  data-value="gp"
                  onClick={[Function]}
                >
                  <a>
                    Gold
                  </a>
                </li>
                <li
                  className={null}
                  data-value="pp"
                  onClick={[Function]}
                >
                  <a>
                    Platinum
                  </a>
                </li>
              </ul>
            </div>
            <div
              className="nice-tag"
            >
              <span
                className="nice-tag-label"
              >
                Silver
              </span>
              <span
                className="nice-tag-badge"
              >
                <input
                  onChange={[Function]}
                  type="number"
                  value={2}
                />
              </span>
              <button
                className="nice-tag-btn"
                onClick={[Function]}
              >
                <i
                  className="icon fa-trash-o"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="nice-panel armor-edit__description"
      id={undefined}
    >
      <div
        className="nice-panel-heading"
      >
        Description
      </div>
      <div
        className="nice-panel-content"
      >
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Description
          </span>
          <div
            className="markdown-textedit preview"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <textarea
              className="nice-form-control"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Description..."
              rows={5}
              value="Stronger than you thought"
            />
            <span
              className="markdown-textedit__preview"
            >
              <p>
                Stronger than you thought
              </p>
            </span>
          </div>
        </div>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="nice-panel armor-edit__save"
      id={undefined}
    >
      <div
        className="nice-panel-heading"
      >
        Save
      </div>
      <div
        className="nice-panel-content"
      >
        <button
          accessKey="x"
          className="nice-btn muted icon fa-ban"
          name="button"
          onClick={[Function]}
        >
          Cancel
        </button>
        <button
          accessKey="s"
          className="nice-btn primary icon fa-save"
          name="button"
          onClick={[Function]}
        >
          Save
        </button>
        <div
          className="clearfix"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`ArmorEdit render should work without props 1`] = `
<div>
  <h2
    className="icon fa-shield"
  >
    Armor
  </h2>
  <div
    className="armor-edit"
  >
    <div
      className="nice-panel armor-edit__basics"
      id={undefined}
    >
      <div
        className="nice-panel-heading"
      >
        Basics
      </div>
      <div
        className="nice-panel-content"
      >
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Type
          </span>
          <div
            className="nice-dropdown nice-form-control"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Light Armor
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className="info"
                data-value="light"
                onClick={[Function]}
              >
                <a>
                  Light Armor
                </a>
              </li>
              <li
                className={null}
                data-value="medium"
                onClick={[Function]}
              >
                <a>
                  Medium Armor
                </a>
              </li>
              <li
                className={null}
                data-value="heavy"
                onClick={[Function]}
              >
                <a>
                  Heavy Armor
                </a>
              </li>
              <li
                className={null}
                data-value="shield"
                onClick={[Function]}
              >
                <a>
                  Shields
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Name
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Name..."
            type={undefined}
            value=""
          />
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            AC
          </span>
          <div
            className="nice-dropdown nice-form-control"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Flat value
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className="info"
                data-value="value"
                onClick={[Function]}
              >
                <a>
                  Flat value
                </a>
              </li>
              <li
                className={null}
                data-value="bonus"
                onClick={[Function]}
              >
                <a>
                  Bonus armor
                </a>
              </li>
              <li
                className={null}
                data-value="formula"
                onClick={[Function]}
              >
                <a>
                  Formula
                </a>
              </li>
            </ul>
          </div>
          <span
            className="nice-input-addon"
          >
            :
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Value..."
            type="number"
            value={0}
          />
        </div>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="nice-panel armor-edit__properties"
      id={undefined}
    >
      <div
        className="nice-panel-heading"
      >
        Properties
      </div>
      <div
        className="nice-panel-content"
      >
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Requires
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Strength..."
            type="number"
            value=""
          />
          <span
            className="nice-input-addon"
          >
            Strength
          </span>
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Weight
          </span>
          <input
            className="nice-form-control"
            disabled={undefined}
            onChange={[Function]}
            onKeyPress={null}
            placeholder="Pounds..."
            type="float"
            value=""
          />
          <span
            className="nice-input-addon"
          >
            lb.
          </span>
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Stealth
          </span>
          <div
            className="nice-dropdown nice-form-control"
          >
            <button
              className="nice-btn"
              disabled={false}
              onClick={[Function]}
            >
              Unhindered
              <i
                className="icon fa-angle-down"
              />
            </button>
            <ul
              className="dropdown-menu"
              onClick={[Function]}
            >
              <li
                className="info"
                data-value={false}
                onClick={[Function]}
              >
                <a>
                  Unhindered
                </a>
              </li>
              <li
                className={null}
                data-value={true}
                onClick={[Function]}
              >
                <a>
                  Disadvantage
                </a>
              </li>
            </ul>
          </div>
        </div>
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Value
          </span>
          <div
            className="base-tag-container nice-tags-container tag-value-container"
          >
            <div
              className="nice-dropdown nice-form-control"
            >
              <button
                className="nice-btn"
                disabled={false}
                onClick={[Function]}
              >
                Add...
                <i
                  className="icon fa-angle-down"
                />
              </button>
              <ul
                className="dropdown-menu"
                onClick={[Function]}
              >
                <li
                  className={null}
                  data-value="cp"
                  onClick={[Function]}
                >
                  <a>
                    Copper
                  </a>
                </li>
                <li
                  className={null}
                  data-value="sp"
                  onClick={[Function]}
                >
                  <a>
                    Silver
                  </a>
                </li>
                <li
                  className={null}
                  data-value="ep"
                  onClick={[Function]}
                >
                  <a>
                    Electrum
                  </a>
                </li>
                <li
                  className={null}
                  data-value="gp"
                  onClick={[Function]}
                >
                  <a>
                    Gold
                  </a>
                </li>
                <li
                  className={null}
                  data-value="pp"
                  onClick={[Function]}
                >
                  <a>
                    Platinum
                  </a>
                </li>
              </ul>
            </div>
          </div>
        </div>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="nice-panel armor-edit__description"
      id={undefined}
    >
      <div
        className="nice-panel-heading"
      >
        Description
      </div>
      <div
        className="nice-panel-content"
      >
        <div
          className="nice-control-group"
        >
          <span
            className="nice-input-addon"
          >
            Description
          </span>
          <div
            className="markdown-textedit preview"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
          >
            <span
              className="markdown-textedit__placeholder"
            >
              Description...
            </span>
            <textarea
              className="nice-form-control"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="Description..."
              rows={5}
              value=""
            />
            <span
              className="markdown-textedit__preview"
            />
          </div>
        </div>
        <div
          className="clearfix"
        />
      </div>
    </div>
    <div
      className="nice-panel armor-edit__save"
      id={undefined}
    >
      <div
        className="nice-panel-heading"
      >
        Save
      </div>
      <div
        className="nice-panel-content"
      >
        <button
          accessKey="x"
          className="nice-btn muted icon fa-ban"
          name="button"
          onClick={[Function]}
        >
          Cancel
        </button>
        <button
          accessKey="s"
          className="nice-btn primary icon fa-save"
          name="button"
          onClick={[Function]}
        >
          Save
        </button>
        <div
          className="clearfix"
        />
      </div>
    </div>
  </div>
</div>
`;
